name               : RogueMonad
version            : 0.1.0.0
synopsis           : A basic roguelike, exploratory programming.
homepage           : https://github.com/spaceships/RogueMonad
license            : GPL-2
license-file       : LICENSE
author             : Brent Carmer
maintainer         : bcarmer@gmail.com
category           : Game
build-type         : Simple
extra-source-files : README.md
cabal-version      : >=1.10


executable rogue-monad
    main-is          : Main.hs
    other-modules    : Rogue.Interface
    build-depends    : base >=4.6 && <4.7, vty-ui ==1.6
    hs-source-dirs   : src
    default-language : Haskell2010
