name               : RogueMonad
version            : 0.1.0.0
synopsis           : A basic roguelike, exploratory programming.
homepage           : https://github.com/spaceships/RogueMonad
license            : GPL-2
license-file       : LICENSE
author             : Brent Carmer
maintainer         : bcarmer@gmail.com
category           : Game
build-type         : Simple
extra-source-files : README.md
cabal-version      : >=1.10

executable rogue-monad
    main-is          : Main.hs
    other-modules    : Rogue.Interface, Rogue.Types, Rogue.Actions, Rogue.World
    build-depends    : base >=4.6 && <4.7
                     , vty-ui ==1.6
                     , mtl ==2.1.2
                     , text ==0.11.3.1
                     , vty ==4.7.3
                     , containers ==0.5.0.0
                     , array ==0.4.0.1
    hs-source-dirs   : src
    default-language : Haskell2010
